# charms

./: .env.example  .gitignore  .skillignore  Makefile  README.md  package.json  pyproject.toml  skillshare-hub.json
.claude-plugin/: GENERATED.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml  release-skill.yml
codex/watch-video/: SKILL.md
commands/: chatgpt-pro-review.md
docs/: README.md  adding-a-skill.md  agent-compatibility.md  agent-guidelines.md  architecture.md  chatgpt-pro-review.md  codex-reset-credit.md  decisions.md  distribution-targets.md  installing-skills.md  package-shape.md  reference-audit-claude-video.md  reference-audit-superpowers.md  reference-audit-video-tools.md  releasing-a-skill.md  roadmap.md  security.md  skillshare.md  target-tool-mapping.md  updating-a-skill.md  watch-video.md  x-bookmarks.md
plugins/watch-video/: README.md
scripts/: add-generated-headers.py  audit-generated.sh  build-agent-skill.sh  build-claude-custom-skill.sh  build-claude-plugin.sh  build-codex-skill.sh  build-marketplace.sh  build-packages.sh  build-skillshare-hub.py  bump-skill-version.py  check-python-syntax.py  check-version-policy.py  install-claude.sh  install-codex.sh  skill_metadata.py  sync-umbrella-version.py  test-groq.sh  verify-packages.sh  verify-skill-metadata.py
skills/: chatgpt-pro-review
tests/: test_build_skillshare_hub.py  test_bump_skill_version.py  test_check_version_policy.py  test_sync_umbrella_version.py  test_verify_skill_metadata.py
(+7 files in other folders)
