[project]
name = "charms"
version = "2026.6.22"
description = "Public workspace of practical, installable charms: agent skills, commands, and Claude Code plugins."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nagarjuna Boddu" }
]

[tool.ruff]
line-length = 100
target-version = "py311"
